--- a/Kratos.css
+++ b/Kratos.css
@@ -4,6 +4,7 @@ body {
     padding: 0px;
 }
 
+
 p {
      margin: 0px; 
     padding: 0px;
@@ -17,6 +18,8 @@ a{
 a:hover {
     color: #D23258;
 }
+
+
 
 #head{
     font-family: Charlemagne Std;
@@ -82,17 +85,6 @@ footer {
     padding-left: 43%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 /* Dropdown Button */
 .dropbtn {
   background-color: rgba(0,0,0,0.0);
@@ -116,8 +108,7 @@ footer {
   position: absolute;
   background-color: rgba(0,0,0,0.0);
   min-width: 160px;
-    text-shadow: 0px 3px 6px rgb(0,0,0,0.8);
-  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
@@ -138,11 +129,6 @@ footer {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: rgba(0,0,0,0.0);color: #D23258; cursor: default;}
 
-
-
-
-
-
 ::-webkit-scrollbar {
     width: 6px;
     background-color: black;
@@ -156,4 +142,180 @@ footer {
 ::-webkit-scrollbar-track {
     -webkit-box-shadow; inset 1px 1px 6px rgba(0,0,0,0.3);
     background-color: #3F3F3F;
+    
 }
+
+.menubottom{
+    display: none;
+}
+
+
+@media screen and (max-device-width: 600px) {
+    
+  
+body {
+    
+    margin: 0px; 
+    padding: 0px;
+}
+
+p {
+     margin: 0px; 
+    padding: 0px;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: #D23258;
+}
+
+#head{
+    opacity: 0;
+    font-family: Charlemagne Std;
+    display: flex;
+    float: right;
+    padding-top: 37px;
+    padding-right: 27px;
+    
+}
+    
+
+
+span{
+    padding-right: 37px;
+    /*color: white;*/
+    text-shadow: 0px 3px 6px rgb(0,0,0,0.8);
+    font-size: 20px;
+}
+
+#all{
+    background-image: url(Mobile.png);
+    background-size: 100% 100%;
+    /*width: 100%;*/
+    width: 100%;
+    height: 100vh;
+}
+
+#alltext{
+    padding-left: 40px;
+    padding-top: 700px;
+    text-align: center;
+    width: 900px;
+    color: white;
+}
+
+.Ptext{
+    font-family: Charlemagne Std;
+    font-size: 150px;
+    text-shadow: 3px 3px 3px black;
+}
+
+.text{
+    
+    padding-top: 30px;
+    line-height: 45px;
+    font-size: 50px;
+    font-family: Lithos Pro;
+     text-shadow: 2px 2px 3px rgb(0,0,0,0.8);
+    
+}
+
+.point{
+    margin-top: 25px;
+    margin-left: 25px;   
+    width: 200px;
+    position: fixed;
+}
+
+footer {
+    margin-top: -1px;
+    width: 100%;
+    height: 120px;
+    background-color: black;
+}
+
+.footphoto{
+    width: 500px;
+    padding-top: 1px;
+    padding-left: 27%;
+}
+
+
+
+    
+    /*menu*/
+    
+    
+    .menubottom{
+        /*text-align: center;
+        font-size: 50px;
+        padding-top: 60px;
+        padding-left: 60px;
+        position: absolute;*/
+         display: none;
+        font-family: Charlemagne Std;
+    color: white;
+  position: absolute;
+  background-color: rgba(0,0,0,0.0);
+  min-width: 160px;
+        padding-left: 100px;
+        padding-top: 150px;
+        font-size: 150px;
+    text-shadow: 0px 3px 6px rgb(0,0,0,0.8);
+  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+  z-index: 1;
+    }
+    
+   /* .point:hover{
+    margin-top: 0px;
+    margin-left: 0px;   
+    width: 200px;
+    position: fixed;
+        background-color: black;
+}*/
+    
+    .menu{
+        position: relative;
+  display: inline-block; 
+    }
+    
+    .menubottom a{
+        color: white;
+  padding: 2px 6px;
+  text-decoration: none;
+  display: block;
+    }
+    
+
+
+    
+    .menubottom a:hover {background-color: rgba(0,0,0,0.0); color: #D23258;}
+
+/* Show the dropdown menu on hover */
+.menu:hover .menubottom {
+    background-color: rgba(0,0,0,1);
+     width: 880px;
+    height: 1590px;  
+    display: block;color: #D23258;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.menu:hover .point {
+    margin: 0;
+    padding: 0;
+    display: none;
+   
+    background-color: rgba(0,0,0,0.0);color: #D23258; cursor: default;}
+
+    
+    
+    
+    
+   
+
+    
+}
+
