--- a/Kratos.css
+++ b/Kratos.css
@@ -195,9 +195,9 @@ span{
 #all{
     background-image: url(Mobile.png);
     background-size: 100% 100%;
-    /*width: 100%;*/
-    width: 1340px;
-    height: 2400px;
+    width: 100%;
+    /*width: 1340px;*/
+    height: 100vh;/*2400px;*/
 }
 
 #alltext{
@@ -234,7 +234,8 @@ span{
 
 footer {
     margin-top: -1px;
-    width: 1340px;
+    /*width: 1340px;*/
+    width: 100%;
     height: 180px;
     background-color: black;
 }
